# 3DFramework

./: .gitignore  .gitmodules  CMakeLists.txt  Directory.Build.props  GenerateProject.bat  README.md  Saffron.sln  Saffron.sln.DotSettings  SaffronEngine.sln  SaffronEngine.targets  Shader.workspace.code-workspace  UpgradeLog.htm  V-3DFramework.sln  V-Engine.sln  Win-GenProjects.bat  premake5.lua  regex.txt  todo.txt
Games/2DGameProject/: 2DGameProject.csproj  2DGameProject.spr  CMakeLists.txt  premake5.lua
Games/2DGameProject/Resources/Scenes/: 2DGameProject.ssc
Games/2DGameProject/Scenes/: 2DGameProject.ssc
Games/2DGameProject/Source/: BasicController.cs  MapGenerator.cs  Noise.cs  PlayerCube.cs  RandomColor.cs  Sink.cs
Games/2DGameProject/src/: MapGenerator.cs  Noise.cs
Games/EmptyWorldProject/: CMakeLists.txt  EmptyWorldProject.csproj  EmptyWorldProject.spr
Games/EmptyWorldProject/Assets/Meshes/: Camera.fbx
Games/EmptyWorldProject/Resources/Scenes/: EmptyWorldProject.ssc
Games/EmptyWorldProject/Scenes/: EmptyWorldProject.ssc
Games/EmptyWorldProject/Source/: Sink.cs
Games/EmptyWorldProject/Src/: BasicController.cs
Games/ScriptCore/: CMakeLists.txt
Saffron/: CMakeLists.txt  Saffron.vcxproj  Saffron.vcxproj.filters  cpp.hint  imgui.ini
Saffron/Assets/Scripts/: Game.ilk
Saffron/Resources/: imgui.ini
Saffron/Source/: Saffron.h  SaffronPCH.h
Saffron/Source/Implementation/: EditorApplication.cpp  EditorApplication.h  EditorLayer.cpp  EditorLayer.h  StartupLayer.cpp  StartupLayer.h
Saffron/Source/Saffron/: Base.h  EntryPoint.h
Saffron/Source/Saffron/Core/: Application.cpp  Application.h  BatchLoader.cpp  BatchLoader.h  DateTime.h  Event.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  LogSink.cpp  MemManaged.h  Project.cpp  Project.h  Run.h  ScopedLock.h  Signal.cpp  Signal.h  Signaller.cpp  Signaller.h  TypeDefs.h  UUID.h  Window.cpp  Window.h
Saffron/Source/Saffron/Debug/: Instrumentor.cpp  Instrumentor.h
Saffron/Source/Saffron/Editor/: AssetPanel.h  EditorTerminal.cpp  EntityPanel.cpp  EntityPanel.h  ScenePanel.cpp  ScenePanel.h  ScriptPanel.cpp  ScriptPanel.h  SplashScreenPane.cpp  SplashScreenPane.h  ViewportPane.cpp  ViewportPane.h
Saffron/Source/Saffron/Entity/: Entity.cpp  Entity.h  EntityComponents.h
Saffron/Source/Saffron/Gui/: Gui.cpp  Gui.h  ImGuizmo.cpp
Saffron/Source/Saffron/Renderer/: Camera.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  PrimitiveType.h  RenderCommandQueue.cpp  RenderCommandQueue.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  ShaderUniform.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h
Saffron/Source/Saffron/Resource/: Factory.h  Resource.h  ResourceManager.cpp  ResourceManager.h
Saffron/Source/Saffron/Scene/: EditorScene.cpp  EditorScene.h  ModelSpaceScene.cpp  ModelSpaceScene.h  RuntimeScene.cpp  RuntimeScene.h  Scene.cpp  Scene.h  SceneComponents.h  SceneEnvironment.cpp  SceneEnvironment.h
Saffron/Source/Saffron/Script/: ScriptEngine.cpp  ScriptEngine.h  ScriptEngineRegistry.cpp  ScriptWrappers.cpp  ScriptWrappers.h
Saffron/Source/Saffron/Serialize/: ApplicationSerializer.cpp  SceneSerializer.cpp
Saffron/Src/: Saffron.h  SaffronPCH.h
Saffron/Src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Saffron/Src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Saffron/Src/Saffron/: Base.h  Config.h  EntryPoint.h  SaffronPCH.cpp  SaffronPCH.h
Saffron/Src/Saffron/Core/: Application.cpp  Application.h  BatchLoader.cpp  BatchLoader.h  Buffer.cpp  Buffer.h  Core.cpp  Core.h  DateTime.cpp  DateTime.h  Engine.cpp  Engine.h  Event.cpp  Event.h  FileIOManager.cpp  FileIOManager.h  GlobalTimer.cpp  GlobalTimer.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  LogMessage.h  LogSink.cpp  LogSink.h  Misc.cpp  Misc.h  Project.cpp  Project.h  Ref.cpp  Ref.h  Run.cpp  Signal.h  Signaller.cpp  SmartPointers.h  TerminalSink.cpp  TerminalSink.h  Time.cpp  (+7 more)
Saffron/Src/Saffron/Debug/: Instrumentor.cpp  Instrumentor.h
Saffron/Src/Saffron/Editor/: AssetPanel.cpp  AssetPanel.h  CameraControllerEditor.cpp  CameraControllerEditor.h  EditorCamera.cpp  EditorCamera.h  EditorTerminal.cpp  EditorTerminal.h  EditorViewport.cpp  EditorViewport.h  EntityPanel.cpp  EntityPanel.h  LoadingScreenPane.cpp  LoadingScreenPane.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ScenePanel.cpp  ScenePanel.h  ScriptPanel.cpp  ScriptPanel.h  SplashScreenPane.cpp  SplashScreenPane.h  ViewportPane.cpp  ViewportPane.h
Saffron/Src/Saffron/Engine/: Engine.cpp  Engine.h  EngineSerializer.cpp  EngineSerializer.h
Saffron/Src/Saffron/Entity/: Entity.cpp  Entity.h  EntityComponents.h  EntityRegistry.cpp  EntityRegistry.h
Saffron/Src/Saffron/Event/: ApplicationEvent.h  Event.cpp  Event.h  EventHandler.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
Saffron/Src/Saffron/GL/: GLCheck.cpp  GLCheck.h
Saffron/Src/Saffron/Graphics/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Window.cpp  Window.h
Saffron/Src/Saffron/Gui/: Gui.cpp  Gui.h  GuiLayer.cpp  GuiLayer.h  GuiTerminal.cpp  GuiTerminal.h  ImGuiBuild.cpp  ImGuiGLFWImpl.cpp  ImGuiGLFWImpl.h  ImGuiImpl.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiOpenGLRenderer.cpp  ImGuiOpenGLRenderer.h  ImGuizmo.cpp  ImGuizmo.h  SplashScreen.cpp  (+1 more)
Saffron/Vendors/.Premake/: Box2D.lua  FastNoise.lua  GLFW.lua  Glad.lua  ImGui.lua  assimp.lua  entt.lua  glm.lua  mono.lua  reactphysics3d.lua  spdlog.lua  stb.lua  yaml-cpp.lua
Saffron/Vendorss/.Premake/: Glad.lua  ImGui.lua
Saffron/src/: Saffron.h
Saffron/src/Implementation/: EditorApplication.cpp  EditorApplication.h  EditorLayer.cpp  EditorLayer.h  StartupLayer.cpp  StartupLayer.h
Saffron/vendors/.Premake/: GLFW.lua
Saffron/vendors/Glad/: Glad.vcxproj  premake5.lua
(+1269 files in other folders)
